k8s/notworking/health-app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: health-app-deployment
spec:
  selector:
    matchLabels:
      app: HealthApp
  replicas: 3
  template:
    metadata:
      labels:
        app: HealthApp
    spec:
      containers:
      - name: test-rest-app
        image: nikishqua/rest-app:latest
        ports:
        - containerPort: 8000
#        livenessProbe:
#          httpGet:
#            port: 8000
#            path: /health
#          initialDelaySeconds: 10
#          periodSeconds: 5
#          timeoutSeconds: 2
