k8s/notworking/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: health-ingress
spec:
  rules:
    - host:  kubernetes.docker.internal
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: health-app-service
                port:
                  number: 8080
#
